[package]
name = "moe-counter"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.13.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
entity = { path = "./entity" }
imagesize = "0.10"
infer = "0.11.0"
sea-orm = { version = "0.10.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
warp = "0.3.3"